{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 94,
  "lineage": "a785c1da-11d6-2b64-b89f-8b19d51bc786",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-05T04:11:08.741-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cs3-innovatech-hr-project/global/firewalls/innovatech-vpc-allow-https",
            "log_config": [],
            "name": "innovatech-vpc-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/cs3-innovatech-hr-project/global/networks/innovatech-vpc",
            "priority": 1000,
            "project": "cs3-innovatech-hr-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cs3-innovatech-hr-project/global/firewalls/innovatech-vpc-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-12-05T04:11:08.744-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cs3-innovatech-hr-project/global/firewalls/innovatech-vpc-allow-internal",
            "log_config": [],
            "name": "innovatech-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/cs3-innovatech-hr-project/global/networks/innovatech-vpc",
            "priority": 1000,
            "project": "cs3-innovatech-hr-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cs3-innovatech-hr-project/global/firewalls/innovatech-vpc-allow-internal",
            "source_ranges": [
              "10.10.1.0/24",
              "10.10.2.0/24",
              "10.10.3.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "sql_private_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.98.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-12-05T04:11:08.874-08:00",
            "id": "projects/cs3-innovatech-hr-project/global/addresses/sql-private-ip-range",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "sql-private-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/cs3-innovatech-hr-project/global/networks/innovatech-vpc",
            "prefix_length": 16,
            "project": "cs3-innovatech-hr-project",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cs3-innovatech-hr-project/global/addresses/sql-private-ip-range"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cs3-innovatech-hr-project/global/networks/innovatech-vpc",
            "mtu": 0,
            "name": "innovatech-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6135814059083866856",
            "project": "cs3-innovatech-hr-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cs3-innovatech-hr-project/global/networks/innovatech-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "automation",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-05T04:11:09.085-08:00",
            "gateway_address": "10.10.2.1",
            "id": "projects/cs3-innovatech-hr-project/regions/europe-west1/subnetworks/innovatech-vpc-automation",
            "ip_cidr_range": "10.10.2.0/24",
            "name": "innovatech-vpc-automation",
            "network": "https://www.googleapis.com/compute/v1/projects/cs3-innovatech-hr-project/global/networks/innovatech-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cs3-innovatech-hr-project",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cs3-innovatech-hr-project/regions/europe-west1/subnetworks/innovatech-vpc-automation",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "hr_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-05T04:11:09.074-08:00",
            "gateway_address": "10.10.3.1",
            "id": "projects/cs3-innovatech-hr-project/regions/europe-west1/subnetworks/innovatech-vpc-monitoring",
            "ip_cidr_range": "10.10.3.0/24",
            "name": "innovatech-vpc-monitoring",
            "network": "https://www.googleapis.com/compute/v1/projects/cs3-innovatech-hr-project/global/networks/innovatech-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cs3-innovatech-hr-project",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cs3-innovatech-hr-project/regions/europe-west1/subnetworks/innovatech-vpc-monitoring",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}